fixed issue of double scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,16 @@ abbr[title] {
   animation: GradientAnimation 50s ease infinite alternate;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 @keyframes GradientAnimation {
   0% {
     background-position: 0% 50%
